<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityB">


    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="2dp"
            android:src="@drawable/a"
            app:civ_border_width="4dp"
            app:civ_border_color="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:cardBackgroundColor="@color/cardcolor"

            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/cardView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="match_parent">


            <TextView
                    android:text="@string/track_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
            />
            <TextView
                    android:text="@string/country_nigeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
            />

            <TextView
                    android:text="@string/email_anas_saulawa_gmail_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
            />
            <TextView
                    android:text="@string/phone_number_08061356134"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
            />
            <TextView
                    android:text="@string/slack_username_saulawa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/andelacolor"
            android:id="@+id/textView2"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/profile_image"/>
    <View
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="2dp"
            android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>